# nbmf_mm

./: .gitignore  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  README_FOR_TESTS.md  display_reproduced_results.py  mkdocs.yml  pixi.toml  pyproject.toml  reproduce_magron2022.py
.github/workflows/: ci.yml  release.yml
data/magron2022/: animals_split.npz
examples/: display_figures.py  display_reproduced_results.py  reproduce_magron2022.py  validate_implementation.py  validate_magron_implementation.py
nbmf_mm/: __init__.py  _base.py  _solver.py  _utils.py  _version.py  nbmf_mm.py
outputs/chauhan2025/: all_experiments_summary.pkl  all_results.pkl  animals_results.csv  animals_results.pkl  figure1_animals_results.csv  figure1_animals_results.pkl  figure1_lastfm_results.csv  figure1_lastfm_results.pkl  figure1_paleo_results.csv  figure1_paleo_results.pkl  figure2_animals_results.pkl  figure2_lastfm_results.pkl  figure2_paleo_results.pkl  figure3_animals_results.csv  figure3_animals_results.pkl  figure3_lastfm_results.csv  figure3_lastfm_results.pkl  figure3_paleo_results.csv  figure3_paleo_results.pkl  lastfm_results.csv  lastfm_results.pkl  paleo_results.csv  paleo_results.pkl
outputs/chauhan2025/animals/: nbmf-mm_model.npz  nbmf-mm_test_init.npz  nbmf-mm_val.npz
outputs/chauhan2025/figures/: chauhan2025_summary_table.csv
outputs/chauhan2025/lastfm/: nbmf-mm_model.npz  nbmf-mm_test_init.npz  nbmf-mm_val.npz
outputs/chauhan2025/paleo/: nbmf-mm_model.npz  nbmf-mm_test_init.npz  nbmf-mm_val.npz
outputs/magron2022/animals/: NBMF-EM_model.npz  NBMF-EM_test_init.npz  NBMF-EM_val.npz  NBMF-MM_model.npz  NBMF-MM_test_init.npz  NBMF-MM_val.npz  logPCA_model.npz  logPCA_test_init.npz  logPCA_val.npz
outputs/magron2022/lastfm/: NBMF-EM_model.npz  NBMF-EM_test_init.npz  NBMF-EM_val.npz  NBMF-MM_model.npz  NBMF-MM_test_init.npz  NBMF-MM_val.npz  logPCA_model.npz  logPCA_test_init.npz  logPCA_val.npz
outputs/magron2022/paleo/: NBMF-EM_model.npz  NBMF-EM_test_init.npz  NBMF-EM_val.npz  NBMF-MM_model.npz  NBMF-MM_test_init.npz  NBMF-MM_val.npz  logPCA_model.npz  logPCA_test_init.npz  logPCA_val.npz
recipe/: meta.yml
src/nbmf_mm/: __init__.py  _base.py  _initialization.py  _mm_exact.py  _objective.py  _rdeps.py  _solver.py  cli.py  estimator.py
tests/: __mm_exact.py  conftest.py  test_algorithm_correctness.py  test_animals_optional.py  test_api.py  test_api_basic.py  test_convergence.py  test_mm_equivalence.py  test_monotonic_objective.py  test_nbmf_mm.py  test_one_step_and_masking.py  test_paper_default_orientation.py  test_public_api.py  test_reproducibility.py  test_strict_parity_optional.py  test_symmetry.py
