[build-system]
requires = ["setuptools>=75", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nbmf-mm"
dynamic = ["version"]                           # from setuptools_scm
description = "Bernoulli mean-parameterized NMF (NBMF) with Majorization–Minimization (NBMF‑MM)"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Siddharth M. Chauhan", email = "github.chauhan.siddharth@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
accel = [
  "numexpr>=2.8",
  "numba>=0.57; python_version < '3.12'",  # don’t block Py3.12
]

[project.urls]
Homepage = "https://github.com/<org-or-user>/nbmf_mm"
Issues   = "https://github.com/<org-or-user>/nbmf_mm/issues"

[tool.setuptools.packages.find]
include = ["nbmf_mm*"]

[tool.setuptools.package-data]
nbmf_mm = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
