[build-system]
requires = ["setuptools>=69", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nbmf-mm"
dynamic = ["version"]
description = "Bernoulli (binary) mean-parameterized NMF (NBMF) w/ Majorization–Minimization (MM)"
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Siddharth M. Chauhan", email = "github.chauhan.siddharth@gmail.com" }]

keywords = ["NMF", "Bernoulli", "matrix factorization", "topic modeling", "ICA", "Dirichlet", "Beta"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Keep base deps minimal; acceleration is in extras.
dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/siddC/nbmf_mm"
Issues   = "https://github.com/siddC/nbmf_mm/issues"
Repository = "https://github.com/siddC/nbmf_mm"

[project.optional-dependencies]
# test/developer tooling
tests = [
  "pytest>=7.2",
  "pytest-cov>=4.0",
]
docs = [
  "sphinx>=7.0",
  "furo>=2023.9.10",
  "myst-parser>=2.0",
]
dev = [
  "black>=24.0",
  "ruff>=0.4",
  "build>=1.2",
  "twine>=5.0",
]

# Acceleration extras
accel = [
  "numexpr>=2.8",
  # numba is fine via pip on 3.10–3.12; conda is recommended elsewhere
  "numba>=0.60; python_version>='3.10'",
]

# Everything EXCEPT the R bridge
all = [
  "scikit-learn>=1.3",
  "numexpr>=2.8",
  "numba>=0.60; python_version>='3.10'",
]

# R bridge (requires an external R installation)
r = ["rpy2>=3.5"]

# Everything INCLUDING the R bridge
all-r = [
  "scikit-learn>=1.3",
  "numexpr>=2.8",
  "numba>=0.60; python_version>='3.10'",
  "rpy2>=3.5",
]

[tool.setuptools.packages.find]
include = ["nbmf_mm*"]

[tool.setuptools_scm]
# create a file so editable installs can read __version__ without metadata
write_to = "nbmf_mm/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

# pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
